Добавлена возможность запуска как локально, так и с помощью docker
Добавлено возможность запуска как локально, так и с помощью docker

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -165,6 +165,20 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>install</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
 </project>
