--- a/gateway/docker-compose.yaml
+++ b/gateway/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://${KAFKA_ADVERTISED_LISTENERS}
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
       - "9092:9092"
@@ -31,9 +31,9 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_DB: app_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
@@ -51,14 +51,16 @@ services:
       - app-network
     command: sh -c './wait-for.sh app_database:5432 -- ./wait-for.sh kafka:9092 -- java -jar /app.jar'
 
+
   auth-microservice:
     build: ../auth-service
     restart: always
     ports:
       - "8088:8088"
     environment:
-      SPRING_DATASOURCE_URL: 'jdbc:postgresql://app_database:5432/app_db'
-      SPRING_LIQUIBASE_URL: 'jdbc:postgresql://app_database:5432/app_db'
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_LIQUIBASE_URL: ${SPRING_LIQUIBASE_URL}
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
     networks:
       - app-network
     depends_on:
@@ -72,8 +74,9 @@ services:
     ports:
       - "8082:8082"
     environment:
-      SPRING_DATASOURCE_URL: 'jdbc:postgresql://app_database:5432/app_db'
-      SPRING_LIQUIBASE_URL: 'jdbc:postgresql://app_database:5432/app_db'
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_LIQUIBASE_URL: ${SPRING_LIQUIBASE_URL}
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
     networks:
       - app-network
     depends_on:
@@ -86,8 +89,10 @@ services:
     ports:
       - "8083:8083"
     environment:
-      SPRING_DATASOURCE_URL: 'jdbc:postgresql://app_database:5432/app_db'
-      SPRING_LIQUIBASE_URL: 'jdbc:postgresql://app_database:5432/app_db'
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_LIQUIBASE_URL: ${SPRING_LIQUIBASE_URL}
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
     networks:
       - app-network
     depends_on:
@@ -100,8 +105,10 @@ services:
     ports:
       - "8084:8084"
     environment:
-      SPRING_DATASOURCE_URL: 'jdbc:postgresql://app_database:5432/app_db'
-      SPRING_LIQUIBASE_URL: 'jdbc:postgresql://app_database:5432/app_db'
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_LIQUIBASE_URL: ${SPRING_LIQUIBASE_URL}
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
     networks:
       - app-network
     depends_on:
@@ -114,7 +121,8 @@ services:
     ports:
       - "8085:8085"
     environment:
-      SPRING_DATASOURCE_URL: 'jdbc:postgresql://app_database:5432/app_db'
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
     networks:
       - app-network
     depends_on:
@@ -127,7 +135,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka/
+      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
     networks:
       - app-network
     depends_on:
