Обновлены некоторые пакеты

--- a/gateway/.env
+++ b/gateway/.env
@@ -1,6 +1,8 @@
 
 KAFKA_ADVERTISED_LISTENERS=localhost:9092
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+VEHICLE_SERVICE_URL= http://localhost:8082/api/v1/vehicles
+
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=12345
