--- a/gateway/docker-compose.yaml
+++ b/gateway/docker-compose.yaml
@@ -93,6 +93,7 @@ services:
       SPRING_LIQUIBASE_URL: ${SPRING_LIQUIBASE_URL}
       EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
       SPRING_KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
+      VEHICLE_SERVICE_URL: http://localhost:8082/api/v1/vehicles
     networks:
       - app-network
     depends_on:
